--- a/org.eclipse.cdt.cross.arc.gnu.uclibc/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu.uclibc/plugin.xml
@@ -1003,7 +1003,6 @@
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                command="-matomic"
-               defaultValue="true"
                id="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic"
                name="Atomic functions (-matomic)"
                valueType="boolean">
@@ -3717,7 +3716,8 @@
                category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
                id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.option.target.atomic"
                name="Atomic functions (-matomic)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic">
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic"
+               value="true">
          </option>
       </toolChain>
       <configuration
@@ -4126,7 +4126,8 @@
                category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
                id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.option.target.atomic"
                name="Atomic functions (-matomic)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic">
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic"
+               value="true">
          </option>
       </toolChain>
       <configuration
@@ -7883,7 +7884,8 @@
                category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
                id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.option.target.atomic"
                name="Atomic functions (-matomic)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic">
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic"
+               value="true">
          </option>
       </toolChain>
       <toolChain
@@ -8398,7 +8400,8 @@
                category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
                id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.option.target.atomic"
                name="Atomic functions (-matomic)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic">
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic"
+               value="true">
          </option>
       </toolChain>
       <toolChain
